--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1 id="h1text">Naoto Hachiouji - Animepédia</h1>
-        <img id="image-naoto" src="naoto.jpg" alt="">
+        <img id="image-naoto" src="Image/naoto.jpg" alt="">
         <h2 id="descriptionh1">Aparência</h2>
         <h3 id="h2textaplicatiion">Senpai é o protagonista do mangá. Ele é tímido e introvertido, tenta evitar qualquer 
             interação social com outras pessoas. Nagatoro apenas o chama de Senpai. Atualmente não se sabe
